--- a/index.html
+++ b/index.html
@@ -4,57 +4,98 @@
     <meta charset="UTF-8">
     <title>Frohe Weihnachten</title>
     <style>
-        body {
-            background-color: #f5f5f5;
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
             font-family: Arial, Helvetica, sans-serif;
+            background: #0b1c2d;
+            overflow: hidden;
+        }
+
+        /* Schneefall */
+        .snow {
+            position: absolute;
+            top: -10px;
+            width: 8px;
+            height: 8px;
+            background: white;
+            border-radius: 50%;
+            opacity: 0.8;
+            animation: fall linear infinite;
+        }
+
+        @keyframes fall {
+            to {
+                transform: translateY(110vh);
+            }
+        }
+
+        /* Karte */
+        .container {
+            position: relative;
+            z-index: 2;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
         }
 
         .card {
-            background-color: #ffffff;
+            background: rgba(255, 255, 255, 0.95);
             padding: 40px;
-            max-width: 400px;
+            max-width: 420px;
             text-align: center;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            border-radius: 14px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.4);
         }
 
         h1 {
-            color: #c62828;
+            color: #0b1c2d;
             margin-bottom: 20px;
         }
 
         p {
-            color: #444;
+            color: #333;
             font-size: 16px;
-            line-height: 1.5;
+            line-height: 1.6;
         }
 
         .footer {
             margin-top: 30px;
             font-size: 14px;
-            color: #777;
+            color: #555;
         }
     </style>
 </head>
 <body>
 
-<div class="card">
-    <h1>🎄 Frohe Weihnachten 🎄</h1>
-    <p>
-        Ich wünsche dir besinnliche Feiertage,<br>
-        erholsame Stunden und einen guten Start<br>
-        ins neue Jahr.
-    </p>
-    <div class="footer">
-        Herzliche Grüße<br>
-        RelativOK
+<!-- Schneeflocken -->
+<div class="snow" style="left:5%; animation-duration:10s;"></div>
+<div class="snow" style="left:15%; animation-duration:12s;"></div>
+<div class="snow" style="left:25%; animation-duration:9s;"></div>
+<div class="snow" style="left:35%; animation-duration:11s;"></div>
+<div class="snow" style="left:45%; animation-duration:13s;"></div>
+<div class="snow" style="left:55%; animation-duration:10s;"></div>
+<div class="snow" style="left:65%; animation-duration:14s;"></div>
+<div class="snow" style="left:75%; animation-duration:9s;"></div>
+<div class="snow" style="left:85%; animation-duration:12s;"></div>
+<div class="snow" style="left:95%; animation-duration:11s;"></div>
+
+<div class="container">
+    <div class="card">
+        <h1>🎄 Frohe Weihnachten 🎄</h1>
+        <p>
+            Ich wünsche dir eine besinnliche Weihnachtszeit,<br>
+            Ruhe, Wärme und viele schöne Momente<br>
+            Hallo
+        </p>
+        <div class="footer">
+            Herzliche Grüße<br>
+            RelativOK
+        </div>
     </div>
 </div>
 
 </body>
 </html>
-
