--- a/index.html
+++ b/index.html
@@ -1,86 +1,100 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <title>Frohe Weihnachten</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            font-family: Arial, Helvetica, sans-serif;
-            background: #0b1c2d;
-            overflow: hidden;
-        }
+<meta charset="UTF-8">
+<title>Frohe Weihnachten</title>
+<style>
+    html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        background: linear-gradient(#081726, #0b1c2d);
+        overflow: hidden;
+    }
 
-        /* Schneefall */
-        .snow {
-            position: absolute;
-            top: -10px;
-            width: 8px;
-            height: 8px;
-            background: white;
-            border-radius: 50%;
-            opacity: 0.8;
-            animation: fall linear infinite;
-        }
+    /* Karte */
+    .container {
+        position: relative;
+        z-index: 2;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-        @keyframes fall {
-            to {
-                transform: translateY(110vh);
-            }
-        }
+    .card {
+        background: rgba(255, 255, 255, 0.95);
+        padding: 40px;
+        max-width: 420px;
+        text-align: center;
+        border-radius: 14px;
+        box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+    }
 
-        /* Karte */
-        .container {
-            position: relative;
-            z-index: 2;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    h1 {
+        color: #0b1c2d;
+        margin-bottom: 20px;
+    }
 
-        .card {
-            background: rgba(255, 255, 255, 0.95);
-            padding: 40px;
-            max-width: 420px;
-            text-align: center;
-            border-radius: 14px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.4);
-        }
+    p {
+        color: #333;
+        font-size: 16px;
+        line-height: 1.6;
+    }
 
-        h1 {
-            color: #0b1c2d;
-            margin-bottom: 20px;
-        }
+    .footer {
+        margin-top: 30px;
+        font-size: 14px;
+        color: #555;
+    }
 
-        p {
-            color: #333;
-            font-size: 16px;
-            line-height: 1.6;
-        }
+    /* Schneeflocken */
+    .snowflake {
+        position: fixed;
+        top: -2rem;
+        font-size: 1.2rem;
+        opacity: 0.9;
+        pointer-events: none;
+        animation-name: fall;
+        animation-timing-function: linear;
+    }
 
-        .footer {
-            margin-top: 30px;
-            font-size: 14px;
-            color: #555;
+    @keyframes fall {
+        to {
+            transform: translateY(110vh);
         }
-    </style>
+    }
+
+    /* Baum */
+    .tree {
+        position: fixed;
+        bottom: 60px;
+        left: 50px;
+        font-size: 80px;
+        z-index: 1;
+    }
+
+    /* Schneeboden */
+    .ground {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 80px;
+        background: linear-gradient(#ffffff, #e0e0e0);
+        border-top-left-radius: 40px;
+        border-top-right-radius: 40px;
+        z-index: 1;
+    }
+</style>
 </head>
 <body>
 
-<!-- Schneeflocken -->
-<div class="snow" style="left:5%; animation-duration:10s;"></div>
-<div class="snow" style="left:15%; animation-duration:12s;"></div>
-<div class="snow" style="left:25%; animation-duration:9s;"></div>
-<div class="snow" style="left:35%; animation-duration:11s;"></div>
-<div class="snow" style="left:45%; animation-duration:13s;"></div>
-<div class="snow" style="left:55%; animation-duration:10s;"></div>
-<div class="snow" style="left:65%; animation-duration:14s;"></div>
-<div class="snow" style="left:75%; animation-duration:9s;"></div>
-<div class="snow" style="left:85%; animation-duration:12s;"></div>
-<div class="snow" style="left:95%; animation-duration:11s;"></div>
+<!-- Baum -->
+<div class="tree">🎄</div>
+
+<!-- Schneeboden -->
+<div class="ground"></div>
 
 <div class="container">
     <div class="card">
@@ -88,14 +102,44 @@
         <p>
             Ich wünsche dir eine besinnliche Weihnachtszeit,<br>
             Ruhe, Wärme und viele schöne Momente<br>
-            Hallo
+            im Kreis deiner Liebsten.
         </p>
         <div class="footer">
             Herzliche Grüße<br>
-            RelativOK
+            <strong>RelativOK</strong>
         </div>
     </div>
 </div>
 
+<script>
+    const snowflakes = ["❄️"];
+    const maxSnowflakes = 60;
+
+    function createSnowflake() {
+        if (document.querySelectorAll(".snowflake").length > maxSnowflakes) return;
+
+        const snowflake = document.createElement("div");
+        snowflake.className = "snowflake";
+        snowflake.textContent = snowflakes[0];
+
+        const size = Math.random() * 20 + 10;
+        const left = Math.random() * window.innerWidth;
+        const duration = Math.random() * 10 + 8;
+
+        snowflake.style.left = left + "px";
+        snowflake.style.fontSize = size + "px";
+        snowflake.style.animationDuration = duration + "s";
+
+        document.body.appendChild(snowflake);
+
+        setTimeout(() => {
+            snowflake.remove();
+        }, duration * 1000);
+    }
+
+    setInterval(createSnowflake, 300);
+</script>
+
 </body>
 </html>
+
