--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@ html, body {
     position: fixed;
     color: white;
     pointer-events: none;
+    z-index: 10; /* ganz vorne */
 }
 
 /* Karte */
 .container {
     position: relative;
-    z-index: 5;
+    z-index: 15; /* Vordergrund */
     height: 100%;
     display: flex;
     justify-content: center;
@@ -63,4 +64,92 @@ p {
 
 /* Schneeboden */
 .ground {
-    position
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 180px;
+    z-index: 5; /* vor Hintergrund */
+}
+
+/* Schneeflocken */
+.snowflake {
+    position: fixed;
+    top: -2rem;
+    pointer-events: none;
+    animation: fall linear forwards;
+    z-index: 12; /* Vordergrund über Boden */
+}
+
+.layer1 { animation-duration: 10s; opacity: 0.9; }
+.layer2 { animation-duration: 16s; opacity: 0.7; }
+.layer3 { animation-duration: 22s; opacity: 0.5; }
+
+@keyframes fall {
+    to { transform: translateY(120vh); }
+}
+</style>
+</head>
+<body>
+
+<!-- Schneeboden -->
+<svg class="ground" viewBox="0 0 1440 180" preserveAspectRatio="none">
+<path d="
+M0,80
+C120,110 240,60 360,85
+C480,120 600,70 720,95
+C840,130 960,75 1080,100
+C1200,120 1320,90 1440,110
+L1440,180
+L0,180
+Z" fill="#f5f7fa"/>
+</svg>
+
+<div class="container">
+<div class="card">
+<h1>🎄 Merry Christmas 🎄</h1>
+<p>
+The magic of Christmas never ends<br>
+and its greatest gifts are<br>
+family & friends.<br><br>
+Merry Christmas & a happy new year.
+</p>
+<div class="footer">— RelativOK —</div>
+</div>
+</div>
+
+<script>
+/* Sterne über gesamter Höhe */
+for (let i = 0; i < 70; i++) {
+    const star = document.createElement("div");
+    star.className = "star";
+    star.textContent = Math.random() > 0.5 ? "✦" : "✧";
+    star.style.left = Math.random() * 100 + "vw";
+    star.style.top = Math.random() * 90 + "vh"; /* über fast die gesamte Höhe */
+    star.style.fontSize = (Math.random() * 14 + 6) + "px";
+    star.style.opacity = Math.random() * 0.6 + 0.3;
+    document.body.appendChild(star);
+}
+
+/* Parallax-Schnee */
+const layers = [
+    { cls: "layer1", size: [18,26], delay: 250 },
+    { cls: "layer2", size: [14,22], delay: 400 },
+    { cls: "layer3", size: [10,18], delay: 600 }
+];
+
+layers.forEach(layer => {
+    setInterval(() => {
+        const flake = document.createElement("div");
+        flake.className = `snowflake ${layer.cls}`;
+        flake.textContent = "❄️";
+        flake.style.left = Math.random() * window.innerWidth + "px";
+        flake.style.fontSize =
+            (Math.random() * (layer.size[1]-layer.size[0]) + layer.size[0]) + "px";
+        document.body.appendChild(flake);
+        setTimeout(() => flake.remove(), 25000);
+    }, layer.delay);
+});
+</script>
+
+</body>
+</html>
